--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -59,7 +59,7 @@
                         <td class="postformField">
                             <input id="postFormInputEmail<%= position %>" type="text" maxlength="<%= maxEmailLength %>"
                                    name="email" size="30" />
-                            <input type="submit" value="<%= postFormButtonSubmit %>" />
+                            <input type="submit" name="submit" value="<%= postFormButtonSubmit %>" />
                         </td>
                     </tr>
                     <tr>
