--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -248,5 +248,8 @@
         <file>static/img/down.png</file>
         <file>static/img/up.png</file>
         <file>static/img/complain.png</file>
+        <file>static/img/file.png</file>
+        <file>static/img/webm_file.png</file>
+        <file>static/img/addfile.png</file>
     </qresource>
 </RCC>
