--- a/src/lib/template/01_base.tmpl
+++ b/src/lib/template/01_base.tmpl
@@ -98,6 +98,8 @@
 
 <% template baseTexts() %>
 <input type="hidden" id="sitePathPrefix" value="<%= sitePathPrefix %>" />
+<input type="hidden" id="siteDomain" value="<%= siteDomain %>" />
+<input type="hidden" id="siteProtocol" value="<%= siteProtocol %>" />
 <% end template %>
 
 <% template settingsTexts() %>
