--- a/src/lib/template/11_board.tmpl
+++ b/src/lib/template/11_board.tmpl
@@ -86,7 +86,7 @@
         <% include createActionHead() %>
         <% include boardHead() %>
         <% include searchActionHead() %>
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style %>.css">
+        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
         <script type="text/javascript" src="/<%= sitePathPrefix %>js/board.js"></script>
     </head>
     <body onload="javascript:initializeOnLoadSettings(); initializeOnLoadBoard();">
