--- a/src/lib/template/board_image.tmpl
+++ b/src/lib/template/board_image.tmpl
@@ -7,7 +7,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <% include baseHead() %>
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style %>.css">
+        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
     </head>
     <body>
         <div class="theImage">
