--- a/src/lib/template/echo_thread.tmpl
+++ b/src/lib/template/echo_thread.tmpl
@@ -4,7 +4,7 @@
 
 <% template head() %>
 <%include thread::head() %>
-<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style %>.css">
+<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
 <% end template %>
 
 <% template body() %>
