--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -27,7 +27,7 @@
 <% include createActionHead() %>
 <% include boardHead() %>
 <% include searchActionHead() %>
-<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style %>.css">
+<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
 <script type="text/javascript" src="/<%= sitePathPrefix %>js/thread.js"></script>
 <% end template %>
 
