--- a/src/lib/template/mlp_board.tmpl
+++ b/src/lib/template/mlp_board.tmpl
@@ -7,7 +7,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <% include baseHead() %>
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style %>.css">
+        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
         <script type="text/javascript" src="/<%= sitePathPrefix %>js/board_mlp.js"></script>
     </head>
     <body>
