--- a/src/lib/template/pr_board.tmpl
+++ b/src/lib/template/pr_board.tmpl
@@ -12,7 +12,7 @@
 
 <% template boardHead() %>
 <% include board::boardHead() %>
-<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style %>.css">
+<link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
 <% end %>
 
 <% end view %>
