--- a/src/lib/template/rules.tmpl
+++ b/src/lib/template/rules.tmpl
@@ -9,7 +9,7 @@
         <% include baseHead() %>
         <% include settingsHead() %>
         <% include searchActionHead() %>
-        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style %>.css">
+        <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
     </head>
     <body onload="javascript:initializeOnLoadSettings();">
         <% include settingsTexts() %>
