--- a/src/lib/template/12_thread.tmpl
+++ b/src/lib/template/12_thread.tmpl
@@ -28,6 +28,9 @@
 <% include boardHead() %>
 <% include searchActionHead() %>
 <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
+<script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/FileSaver.min.js"></script>
+<script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/jszip.min.js"></script>
+<script type="text/javascript" src="/<%= sitePathPrefix %>js/3rdparty/jszip-utils.min.js"></script>
 <script type="text/javascript" src="/<%= sitePathPrefix %>js/thread.js"></script>
 <% end template %>
 
