Implement favicon blinking on new posts

--- a/src/lib/ololord_static_img.qrc
+++ b/src/lib/ololord_static_img.qrc
@@ -254,5 +254,6 @@
         <file>static/img/google.png</file>
         <file>static/img/iqdb.png</file>
         <file>static/img/download.png</file>
+        <file>static/img/favicon_newmessage.ico</file>
     </qresource>
 </RCC>
