--- a/src/lib/static/css/photon.css
+++ b/src/lib/static/css/photon.css
@@ -316,12 +316,13 @@ span.spoiler:hover a {
     white-space: nowrap;
 }
 
-.postHeader > a > img, .postFileSearch > a > img {
+.postHeader > a > img, .postFileSearch > a > img, .postHeader > span > a > img, .postHeader > span > span > a > img {
     opacity: 0.65;
     filter: alpha(opacity=65);
 }
 
-.postHeader > a > img:hover, .postFileSearch > a > img:hover {
+.postHeader > a > img:hover, .postFileSearch > a > img:hover, .postHeader > span > a > img:hover,
+.postHeader > span > span > a > img:hover {
     opacity: 1;
     filter: alpha(opacity=100);
 }
