Fix post link insertion

--- a/src/lib/template/02_base_board.tmpl
+++ b/src/lib/template/02_base_board.tmpl
@@ -623,7 +623,7 @@
 <% if ( content.captchaEnabled ) %>
     <script type="text/javascript" src="https://www.google.com/recaptcha/api.js"></script>
 <% end %>
-<% end %>
+<% end template %>
 
 <% end view %>
 <% end skin %>
