--- a/src/lib/template/board_video.tmpl
+++ b/src/lib/template/board_video.tmpl
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <% include baseHead() %>
+        <% include baseHead(0) %>
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
     </head>
     <body>
