--- a/src/lib/template/not_found.tmpl
+++ b/src/lib/template/not_found.tmpl
@@ -6,12 +6,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <% include baseHead() %>
-        <% include settingsHead() %>
+        <% include baseHead(1) %>
         <link rel="stylesheet" type="text/css" href="/<%= sitePathPrefix %>css/<%= style.name %>.css">
     </head>
     <body onload="javascript:initializeOnLoadSettings();">
-        <% include settingsTexts() %>
+        <% include baseTexts() %>
         <% include settings() %>
         <br />
         <% include navbar() %>
